2007-05-22 Filip Brcic <brcha@users.sourceforge.net>

	* src/Templates/TEMPLATE.*.tpl: Added Emacs templates

2007-04-06 Filip Brcic <brcha@users.sourceforge.net>

	* changelog.sh: Adapted for svk
	* src/sys/include/malloc.h: Removed
	* templates/c: Added

2007-04-05 Filip Brcic <brcha@users.sourceforge.net>

	* trunk: Merged the libgcc-libsupc++-from-gcc branch


2007-04-05 Filip Brcic <brcha@users.sourceforge.net>

	* xenv/Makefile.target: Removed lines 24-23.
	* doc/screenshots/oomtk-libgcc.png: Screenshot of OOMTK working
	with libgcc and libsupc++ provided with gcc-4.1.1
	* src/sys/boot/ia32/CMakeLists.txt: linking with libglue
	* src/sys/include/halt.h: added #ifdef __cplusplus
	* src/sys/libs/libc++: removed from the project
	* src/sys/libs/supc++: removed from the project
	* src/sys/libs/libglue/memset.{h,c}: memset() - prototype
	* src/sys/libs/libglue/free.{h,c}: free() - prototype
	* src/sys/libs/libglue/abort.{h,c}: abort() - working
	* src/sys/libs/libglue/malloc.{h,c}: malloc() - prototype
	* src/sys/libs/libglue/libglue.h: wrapper for libglue/*.h
	* src/sys/libs/libglue/CMakeLists.txt: libglue makefile
	* src/sys/libs/cxxlib: removed from the project
	* src/sys/libs/CMakeLists.txt: added libglue
	* src/sys/CMakeLists.txt: added libglue


2007-04-05 Filip Brcic <brcha@users.sourceforge.net>

        * xenv/Makefile.target: fixed the building of libsupc++
        * changelog.sh: Added a modified version of ChangeLog generation
        script taken from the gnash project. Their script worked with cvs
        and mine works with svn, but it is generaly the same script.
        * ChangeLog: Added full "svn log" to the ChangeLog and this new
        message.

------------------------------------------------------------------------
r46 | brcha | 2007-04-04 17:05:53 +0200 (Wed, 04 Apr 2007) | 2 lines

* Port OOMTK to use bundled libgcc and libsupc++ that come with gcc(-4.1.1)

------------------------------------------------------------------------