@@ -3,9 +3,10 @@
  *
  *  This file is part of OOMTK
  */
-/** \file $MODULE$.h
+/** \file $MODULE$.S
  * \brief Description
  */
 /*
  * $Id: $
  */
+ 
