@@ -9,4 +9,4 @@
 /*
  * $Id: $
  */
- 
+#include "$MODULE$.h"
